DevOps/K8s/service.yaml
---
# Source: helm-chart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi
  labels:
    app: fastapi
spec:
  selector:
    app: fastapi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
  
---
# Source: helm-chart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nuxtjs
  labels:
    app: nuxtjs
spec:
  selector:
    app: nuxtjs
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer
  externalTrafficPolicy: Cluster
---
# Source: helm-chart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    app: postgres
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
